--- a/api/src/mail/templates/verification.hbs
+++ b/api/src/mail/templates/verification.hbs
@@ -1,4 +1,4 @@
-<p>Hi {{ email }},</p>
+<p>Hi {{ toEmail }},</p>
 
 <p>BCR can confirm that your holding of {{customerHoldingAmount}} bitcoins with {{custodianName}} has been verified</p>
 
