--- a/api/src/mail-service/templates/verification.hbs
+++ b/api/src/mail-service/templates/verification.hbs
@@ -4,9 +4,9 @@
 
 <ul>
   {{#each verifiedHoldings}}
-    <li>{{this.customerHoldingAmount}} held at {{this.custodianName}}.</li>
+    <li>{{this.customerHoldingAmount}} held at {{this.exchangeName}}.</li>
   {{/each}}
 </ul>
 
 <p>Thanks,</p>
-<p>Bitcoin Custodian Registry</p>
+<p>The Crypto Registry</p>
