--- a/api/src/mail-service/templates/verification.hbs
+++ b/api/src/mail-service/templates/verification.hbs
@@ -4,7 +4,7 @@
 
 <ul>
   {{#each verifiedHoldings}}
-    <li>{{this.customerHoldingAmount}} held at {{this.exchangeName}}.</li>
+    <li>{{this.customerHoldingAmount}} bitcoin held at {{this.exchangeName}}.</li>
   {{/each}}
 </ul>
 
