--- a/client/src/components/sha-265-converter.module.css
+++ b/client/src/components/sha-265-converter.module.css
@@ -1,4 +1,10 @@
 .hex {
     margin: 10px 0 10px 0;
     cursor: pointer;
+    display: flex;
+    flex-direction: row;
+}
+
+.icon {
+    margin: 0 0 0 5px;
 }
