--- a/client/src/components/current-submission.module.css
+++ b/client/src/components/current-submission.module.css
@@ -2,3 +2,9 @@
     margin: 10px 10px 0 0;
     width: 120px
 }
+
+.paymentAddress {
+    display: flex;
+    flex-direction: row;
+    margin: 10px 0 10px 0;
+}
