Added Remote Verification.

--- a/api/src/mail-service/templates/verification.hbs
+++ b/api/src/mail-service/templates/verification.hbs
@@ -1,12 +1,14 @@
 <p>Hi {{ toEmail }},</p>
 
-<p>BCR has verified the following Bitcoin holdings:</p>
+<p>The Crypto Registry Network has verified the following Bitcoin holdings:</p>
 
 <ul>
   {{#each verifiedHoldings}}
     <li>{{this.customerHoldingAmount}} bitcoin held at {{this.exchangeName}}.</li>
   {{/each}}
 </ul>
+
+<p>This email was sent by {{ verificationNodeName }} at {{ verificationNodeAddress}}.</p>
 
 <p>Thanks,</p>
 <p>The Crypto Registry</p>
