--- a/api/src/mail-service/templates/verify-email.hbs
+++ b/api/src/mail-service/templates/verify-email.hbs
@@ -2,7 +2,7 @@
 
 <p>Click the link to verify your email.</p>
 
-<a href="{{ link }}">Verify My Email</a>
+<a href="{{ link }}">Verify my email</a>
 
 <p>Thanks,</p>
 <p>Crypto Registry</p>
