--- a/api/src/mail-service/templates/verify-email.hbs
+++ b/api/src/mail-service/templates/verify-email.hbs
@@ -1,8 +1,9 @@
 <p>Hi {{ toEmail }},</p>
 
-<p>Click the link to verify your email.</p>
+<p>Click the link to verify your email, and initiate the approval process.</p>
 
-<a href="{{ link }}">Verify my email</a>
+<a href="{{ link }}">Verify my email and initiate approvals.</a>
+<br>
 
 <p>Thanks,</p>
 <p>Crypto Registry</p>
