--- a/api/src/mail-service/templates/verify-email.hbs
+++ b/api/src/mail-service/templates/verify-email.hbs
@@ -2,8 +2,7 @@
 
 <p>Click the link to verify your email, and initiate the approval process.</p>
 
-<a href="{{ link }}">Verify my email and initiate approvals.</a>
-<br>
+<p><a href="{{ link }}">Verify my email and initiate approvals.</a></p>
 
 <p>Thanks,</p>
 <p>Crypto Registry</p>
