--- a/api/src/mail-service/templates/registration-approval-request.hbs
+++ b/api/src/mail-service/templates/registration-approval-request.hbs
@@ -2,7 +2,7 @@
 
 <p>Click on the link to approve or reject the registration of {{ exchangeName }} by {{ registrationEmail }}</p>
 
-<a href="{{ link }}">Open the Approvals Page</a>
+<p><a href="{{ link }}">Open the Approvals Page</a></p>
 
 <p>Thanks,</p>
 <p>Crypto Registry</p>
