--- a/api/src/mail-service/templates/verification.hbs
+++ b/api/src/mail-service/templates/verification.hbs
@@ -4,7 +4,7 @@
 
 <ul>
     {{#each verifiedHoldings}}
-        <li>{{this.customerHoldingAmount}} bitcoin held at {{this.exchangeName}} verified on {{ this.submissionDate }}.</li>
+        <li>{{this.customerHoldingAmount}} bitcoin held at {{this.exchangeName}} verified at {{ this.submissionDate }}.</li>
     {{/each}}
 </ul>
 
